--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Dockerhub 镜像加速">
     <meta property="og:description" content="多平台容器镜像代理服务,支持 Docker Hub, GitHub, Google, k8s 等镜像仓库.">
     <!--<meta property="og:image" content="https://domain/img/dockerproxy_com_twitter_800.jpg">-->
-    <link href="./Dockerhub 镜像加速_files/chunk-vendors.css" rel="stylesheet">
+    <link href="./css/chunk-vendors.css" rel="stylesheet">
     <link href="./css/main.css" rel="stylesheet">
     <link href="./css/app.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/header.css">
