--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                  @keyframes instantAnminate { from { opacity: 1; } 50% { opacity: 0.4 } to { opacity: 0.9; }}
                 .link-instanted { animation: instantAnminate 0.6s 1; animation-fill-mode:forwards }
                 .link-instanted * { animation: instantAnminate 0.6s 1; animation-fill-mode:forwards }
-            </style><link rel="prefetch" href="https://dockerhub.top/"><link rel="prefetch" href="https://ghproxy.cn/"><link rel="prefetch" href="https://dockerpull.com/"></head>
+            </style><link rel="prefetch" href="https://dockerhub.top/"><link rel="prefetch" href="https://dockerhub.top/"><link rel="prefetch" href="https://dockerhub.top/"></head>
   <body class="is-preload homepage">
       <script>
   function scrollDown() {
