--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <meta property="og:title" content="Dockerhub 镜像加速">
     <meta property="og:description" content="多平台容器镜像代理服务,支持 Docker Hub, GitHub, Google, k8s 等镜像仓库.">
     <meta property="og:image" content="https://domain/img/dockerproxy_com_twitter_800.jpg">
-    <link href="./css/chunk-vendors.css" rel="stylesheet">
-    <link href="./css/main.css" rel="stylesheet">
-    <link href="./css/app.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./css/header.css">
+    <link href="https://dockerhub-e6k.pages.dev/css/chunk-vendors.css" rel="stylesheet">
+    <link href="https://dockerhub-e6k.pages.dev/css/main.css" rel="stylesheet">
+    <link href="https://dockerhub-e6k.pages.dev/css/app.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://dockerhub-e6k.pages.dev/css/header.css">
     <style class="automa-element-selector">@font-face { font-family: "Inter var"; font-weight: 100 900; font-display: swap; font-style: normal; font-named-instance: "Regular"; src: url("chrome-extension://infppggnoaenmfagbfknfkancpbljcca/Inter-roman-latin.var.woff2") format("woff2") } .automa-element-selector { direction: ltr } [automa-isDragging] { user-select: none } [automa-el-list] {outline: 2px dashed #6366f1;}
     </style>
     <style>
