--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
             <nav id="nav">
               <ul>
                 <li>
+                  <div class="search">
+                      <form action="https://hub.docker.com/search?q=" method="get">
+                          <input type="text" name="search" placeholder="搜索Docker Hub" style="width: 300px; height:30px; font-size: 14px;">
+                      </form>
+                  </div>
+                </li>  
+                <li>
                   <a aria-current="page" href="https://dockerhub.top/" class="router-link-active router-link-exact-active">首页</a></li>
                 <li>
                   <a aria-current="page" href="https://hub.docker.com" class="router-link-active router-link-exact-active">官网</a></li>
